--- a/register.html
+++ b/register.html
@@ -1,110 +1,151 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+
+<head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="stylesheet/css/main.css">
-    <title>Style conference</title>
-  </head>
-  <body>
-    <header class="primary-header container group">
-      <h1 class="logo">
-          <a href="index.html">OpenHydrantgh</a>
-      </h1>
-      <h3 class="tagline">August 24&ndash; 26th &mdash; chicago, IL</h3>
-      <nav class="nav primary-nav">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>OpenHydrantgh</title>
+    <!-- main css -->
+    <link rel="stylesheet" href="/stylesheet/css/style.css">
+    <!-- CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Boostrap css starts here  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <style>
+        #intro {
+            background-image: url(https://mdbootstrap.com/img/new/fluid/city/008.jpg);
+            height: 100vh;
+        }
+
+        /* Height for devices larger than 576px */
+        @media (min-width: 992px) {
+            #intro {
+                margin-top: -58.59px;
+            }
+        }
+
+        .navbar .nav-link {
+            color: #fff !important;
+        }
+    </style>
+</head>
+
+<body>
+
+    <nav>
+        <div class="logo">OpenHgh</div>
+        <input type="checkbox" id="click">
+        <label for="click" class="menu-btn">
+            <i class="fas fa-bars"></i>
+        </label>
         <ul>
-          <li><a href="index.html">Home</a></li><!--
-          --><li><a href="speakers.html">Speakers</a></li><!--
-          --><li><a href="schedule.html">Schedule</a></li><!--
-          --><li><a href="venue.html">Venue</a></li><!--
-          --><li><a href="register.html">Register</a></li>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="team.html">Download</a></li>
+            <li><a href="ghana.html">Regions and Destricts</a></li>
+            <li><a href="venue.html">Explore Map</a></li>
+            <li><a href="register.html">Help</a></li>
         </ul>
-      </nav>
+    </nav>
+
+    <!-- Background image -->
+    <div id="intro" class="bg-image shadow-2-strong">
+        <div class="mask d-flex align-items-center h-100" style="background-color: rgba(0, 0, 0, 0.8);">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-xl-5 col-md-8">
+                        <form class="bg-white  rounded-5 shadow-5-strong p-5">
+                            <!-- Email input -->
+                            <div class="form-outline mb-4">
+                                <input type="email" id="form1Example1" class="form-control" />
+                                <label class="form-label" for="form1Example1">Email address</label>
+                            </div>
+
+                            <!-- Password input -->
+                            <div class="form-outline mb-4">
+                                <input type="password" id="form1Example2" class="form-control" />
+                                <label class="form-label" for="form1Example2">Password</label>
+                            </div>
+
+                            <!-- 2 column grid layout for inline styling -->
+                            <div class="row mb-4">
+                                <div class="col d-flex justify-content-center">
+                                    <!-- Checkbox -->
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="form1Example3"
+                                            checked />
+                                        <label class="form-check-label" for="form1Example3">
+                                            Remember me
+                                        </label>
+                                    </div>
+                                </div>
+
+                                <div class="col text-center">
+                                    <!-- Simple link -->
+                                    <a href="#!">Forgot password?</a>
+                                </div>
+                            </div>
+
+                            <!-- Submit button -->
+                            <button type="submit" class="btn btn-primary btn-block">Sign in</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Background image -->
     </header>
-    <section class="row-alt">
-      <div class="lead container">
-          <h1> Support</h1>
+    <!--Main Navigation-->
 
-          <p>We are happy to welcome your support by identifying a hydrant and leting us know the location</p>
-      </div>
-
-      </section>
-      <section class="row">
-        <div class="gird">
-          <section class="col-2-3">
-            <h2>Please send your the details here</h2>
-            <p>purchase your style conference pass using the form to the right multiple passes may be purchased within the same order, so feel free bring a friend</p>
-            <h4>Why help</h4>
-            <ul class="why-attend">
-              <li>To help us improve on the number of hydrants within your area</li>
-              <li>To help the Ghana fire service identify the nearest hydrant in an emergency</li>
-              <li>To help the Gorvenment make decisions base on data</li>
-            </ul>
-
-          </section><!--
-        -->  <form class="col-1-3" action="#" method="post">
-          <fieldset class="register-group">
-            <label>
-              Name
-              <input type="text" name="name" placeholder="full Name" required>
-            </label>
-
-            <label>
-              Email
-              <input type="email" name="email" placeholder="Email address" required>
-            </label>
-
-            <label>
-              Number of hydrants
-              <select name="quanity" required>
-                <option value="1" selected>1</option>
-                <option value="2" selected>2</option>
-                <option value="3" selected>3</option>
-                <option value="4" selected>4</option>
-                <option value="5" selected>5</option>
-                <option value="6" selected>6</option>
-                <option value="7" selected>7</option>
-                <option value="8" selected>8</option>
-                <option value="9" selected>9</option>
-                <option value="0" selected>0</option>
-
-              </select>
-            </label>
-
-            <label>
-              Please give us location and landmarks of each hydrant
-              <textarea name="comments"></textarea>
-            </label>
-
-          </fieldset>
-
-          <input class="btn btn-default" type="submit" name="submit" value="Submit">
-
-          </form>
-
+    <!--Footer-->
+    <footer class="bg-light text-lg-start">
+        <div class="py-4 text-center">
+            <a role="button" class="btn btn-primary btn-lg m-2"
+                href="#" rel="nofollow" target="_blank">
+                Download
+            </a>
+            <a role="button" class="btn btn-primary btn-lg m-2" href="#"
+                target="_blank">
+                Download APP
+            </a>
         </div>
-      </section>
 
+        <hr class="m-0" />
 
-      <section class="row">
-        <div class="gird">
-
-
+        <div class="text-center py-4 align-items-center">
+            <p>Follow on social media</p>
+            <a href="#" class="btn btn-primary m-1" role="button"
+                rel="nofollow" target="_blank">
+                <i class="fab fa-youtube"></i>
+            </a>
+            <a href="#" class="btn btn-primary m-1" role="button" rel="nofollow"
+                target="_blank">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="#" class="btn btn-primary m-1" role="button" rel="nofollow"
+                target="_blank">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="#" class="btn btn-primary m-1" role="button" rel="nofollow"
+                target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
         </div>
-      </section>
 
-    <footer class="primary-footer container group">
-      <small>&copy; Style Conference</small>
-      <nav class="nav">
-        <ul>
-          <li><a href="index.html">Home</a></li><!--
-          --><li><a href="speakers.html">Speakers</a></li><!--
-          --><li><a href="schedule.html">Schedule</a></li><!--
-          --><li><a href="venue.html">Venue</a></li><!--
-          --><li><a href="register.html">Register</a></li>
-        </ul>
-      </nav>
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2023 Copyright:
+            <a class="text-dark" href="#">OpenHydrantgh</a>
+        </div>
+        <!-- Copyright -->
     </footer>
+    <!--Footer-->
+</body>
 
-  </body>
 </html>
