--- a/register.html
+++ b/register.html
@@ -99,19 +99,16 @@
             </div>
         </div>
     </div>
-    <!-- Background image -->
-    </header>
-    <!--Main Navigation-->
+    
+    
 
     <!--Footer-->
     <footer class="bg-light text-lg-start">
         <div class="py-4 text-center">
-            <a role="button" class="btn btn-primary btn-lg m-2"
-                href="#" rel="nofollow" target="_blank">
+            <a role="button" class="btn btn-primary btn-lg m-2" href="#" rel="nofollow" target="_blank">
                 Download
             </a>
-            <a role="button" class="btn btn-primary btn-lg m-2" href="#"
-                target="_blank">
+            <a role="button" class="btn btn-primary btn-lg m-2" href="#" target="_blank">
                 Download APP
             </a>
         </div>
@@ -120,20 +117,16 @@
 
         <div class="text-center py-4 align-items-center">
             <p>Follow on social media</p>
-            <a href="#" class="btn btn-primary m-1" role="button"
-                rel="nofollow" target="_blank">
+            <a href="#" class="btn btn-primary m-1" role="button" rel="nofollow" target="_blank">
                 <i class="fab fa-youtube"></i>
             </a>
-            <a href="#" class="btn btn-primary m-1" role="button" rel="nofollow"
-                target="_blank">
+            <a href="#" class="btn btn-primary m-1" role="button" rel="nofollow" target="_blank">
                 <i class="fab fa-facebook-f"></i>
             </a>
-            <a href="#" class="btn btn-primary m-1" role="button" rel="nofollow"
-                target="_blank">
+            <a href="#" class="btn btn-primary m-1" role="button" rel="nofollow" target="_blank">
                 <i class="fab fa-twitter"></i>
             </a>
-            <a href="#" class="btn btn-primary m-1" role="button" rel="nofollow"
-                target="_blank">
+            <a href="#" class="btn btn-primary m-1" role="button" rel="nofollow" target="_blank">
                 <i class="fab fa-github"></i>
             </a>
         </div>
